# diskpack

./: .gitignore  CMakeLists.txt  README.md  build.sh
compute/: CMakeLists.txt  consts.h  main  main.cpp
configuration-finder/: CMakeLists.txt
configuration-finder/include/: search.h
configuration-finder/src/: main.cpp  search.cpp
disk-packing-generator/: CMakeLists.txt
disk-packing-generator/include/diskpack/: checkers.h  codec.h  constants.h  corona.h  generator.h  geometry.h  search.h  tools.h
disk-packing-generator/protos/: cw.proto
disk-packing-generator/src/: checkers.cpp  codec.cpp  corona.cpp  generator.cpp  geometry.cpp  search.cpp  tools.cpp
diskpack/include/diskpack/: constants.h  geometry.h
diskpack/src/: codec.cpp  generator.cpp  geometry.cpp  search.cpp
visualization-tool/: CMakeLists.txt  notebook.ipynb
visualization-tool/src/: cw_pb2.py  main.cpp
visualize/: notebook.ipynb
